# rusty_kick_server

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: controllers.rs  main.rs  models.rs  service.rs  services.rs
src/certs/: cert.pem  key.pem  localhost.pfx
src/controllers/: file_controller.rs  mod.rs  task_controller.rs  user_controller.rs
src/models/: task.rs  user.rs
templates/: user.html.tera  user_list.html.tera
