[package]
name = "rusty_kick_server"
version = "0.1.0"
edition = "2018"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc", features = ["secrets", "json"] }
serde = {version = "1.0.130", features = ["derive"]}
